tests/ui/traits/next-solver/normalization-shadowing/normalizes_to_ignores_unnormalizable_candidate.stderr
error[E0283]: type annotations needed
  --> $DIR/normalizes_to_ignores_unnormalizable_candidate.rs:25:5
   |
LL |     foo(unconstrained())
   |     ^^^ --------------- type must be known at this point
   |     |
   |     cannot infer type of the type parameter `T` declared on the function `foo`
   |
   = note: cannot satisfy `Vec<_>: Trait`
note: required by a bound in `foo`
  --> $DIR/normalizes_to_ignores_unnormalizable_candidate.rs:14:11
   |
LL | fn foo<T: Trait<Assoc = u8>>(x: T) {}
   |           ^^^^^^^^^^^^^^^^^ required by this bound in `foo`
help: consider specifying the generic argument
   |
LL |     foo::<Vec<T>>(unconstrained())
   |        ++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
